--- a/index.html
+++ b/index.html
@@ -245,9 +245,10 @@
             <div class="pro3__img pro3__img--2">
               <h5>해가 된 누이, 달이 된 오라버니</h5>
               <p>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span></p>
+                <span>한국의 전래동화 '해님달님'을 일월오봉도에 담아냈다.</span>
+                <span>일반적으로 해는 남성을, 달은 여성을 뜻하는 경우가 많은데,</span>
+                <span>오라버니가 달이 된 부분이 흥미로워 '해님달님' 이야기를 주제로 삼았다.</span>
+              </p>
             </div>
             <div class="pro3__img pro3__img--1"></div>
           </div>
