pro3 txt margin top

--- a/index.html
+++ b/index.html
@@ -186,9 +186,11 @@
             <div class="pro2__img pro2__img--2">
               <h5>한림공원 인포그래픽</h5>
               <p>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span>
-                <span>설명을 뭐라고 적어보다 이야아아앙아아아아아</span></p>
+                <span>제주도에 위치한 한림공원의 인포그래픽을 만들었다.</span>
+                <span>상단에는 한림공원에 대한 간단한 소개와 역사를 소개하고 있으며,</span>
+                <span>하단에는 이용안내 및 추천코스, 공원의 위치를 담아냈다.</span>
+                <span>중앙에는 공원의 9가지 테마를 일러스트로 표현하였다.</span>
+              </p>
             </div>
           </div>
       </div>
