pro3 margin 0 auto

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
           </div>
       </div>
       <div class="pro2__bottom">
+        <div class="pro2__title"></div>
         <ul class="pro2__colorbox">
           <li class="pro2__color">
             <div class="color__dot dot--4"></div>
@@ -218,21 +219,7 @@
             </div>
           </li>
         </ul>
-        <div class="pro2__txt">
           <div class="pro2__font"></div>
-          <div class="pro2__des">
-            <p>
-              <span>설명을 뭐라고 적어보자</span>
-              <span>설명을 뭐라고 적어보자</span>
-              <span>설명을 뭐라고 적어보자</span>
-            </p>
-            <p>
-              <span>설명을 뭐라고 적어보자</span>
-              <span>설명을 뭐라고 적어보자</span>
-              <span>설명을 뭐라고 적어보자</span>
-            </p>
-          </div>
-        </div>
       </div>
       <div class="pro3" >
         <div class="pro3__top" id="project3">
