--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
                 <li>시각디자인 학위 (예정)</li>
                 <li>노마드코더 코코아 클론 2주 완성반 (수료)</li>
                 <li>노마드코더 바닐라 JS 2주 완성반 (수료)</li>
-                <li>udemy 강의 나중에 뭐라도 적자</li>
-                <li>udemy 강의 나중에 뭐라도 적자</li>
+                <li>udemy Advanced CSS and Sass (듣는중)</li>
+                <li>udemy 50 Projexts in 50 Days (듣는중)</li>
               </ul>
             </div>
           </div>
@@ -191,6 +191,9 @@
                 <span>하단에는 이용안내 및 추천코스, 공원의 위치를 담아냈다.</span>
                 <span>중앙에는 공원의 9가지 테마를 일러스트로 표현하였다.</span>
               </p>
+              <button class="pro2__btn">
+                크게보기
+              </button>
             </div>
           </div>
       </div>
@@ -238,6 +241,11 @@
                 <span>일반적으로 해는 남성을, 달은 여성을 뜻하는 경우가 많은데,</span>
                 <span>오라버니가 달이 된 부분이 흥미로워 '해님달님' 이야기를 주제로 삼았다.</span>
               </p>
+              <a href="#popup2">
+                <button class="pro3__btn">
+                  크게보기
+                </button>
+              </a>
             </div>
             <div class="pro3__img pro3__img--1"></div>
           </div>
@@ -301,6 +309,13 @@
     <button class="arrow-up">
       <span class="material-icons"> arrow_upward </span>
     </button>
+
+    <div class="popup2" id="popup2">
+      <div class="popup2__content">
+        <a href="#project3" class="popup2__close">&times;</a>
+        <img src="img/sun-illust.jpg" alt="image" class="popup2__img">
+      </div>
+    </div>
 
     <script src="main.js"></script>
   </body>
