--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@
                 <span>하단에는 이용안내 및 추천코스, 공원의 위치를 담아냈다.</span>
                 <span>중앙에는 공원의 9가지 테마를 일러스트로 표현하였다.</span>
               </p>
-              <button class="pro2__btn">
-                크게보기
-              </button>
+              <a href="#popup1">
+                <button class="pro2__btn">
+                  크게보기
+                </button>
+              </a>
             </div>
           </div>
       </div>
@@ -309,6 +311,13 @@
     <button class="arrow-up">
       <span class="material-icons"> arrow_upward </span>
     </button>
+
+    <div class="popup1" id="popup1">
+      <div class="popup1__content">
+        <a href="#project2" class="popup1__close">&times;</a>
+        <img src="img/jeju-info.png" alt="image" class="popup1__img">
+      </div>
+    </div>
 
     <div class="popup2" id="popup2">
       <div class="popup2__content">
